MyDevOrg/src/objects/Product_Backlog__c.object
<CustomObject>
    <fields>
        <fullName>Actual_effort__c</fullName>
        <label>Actual effort (In hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_effort__c</fullName>
        <label>Planned effort (In hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Product Backlogs</relationshipLabel>
        <relationshipName>Product_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge aquisitions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_description__c</fullName>
        <label>Requirement description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_summary__c</fullName>
        <label>Requirement summary</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint ID</label>
        <referenceTo>Sprint_Backlog__c</referenceTo>
        <relationshipLabel>Product Backlogs</relationshipLabel>
        <relationshipName>Product_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_completed__c</fullName>
        <label>Work completed (In hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Backlog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STR{00000}</displayFormat>
        <label>Story ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Backlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>